apps/service-runner/overlays/staging/service-runner-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicerunner
spec:
  rules:
    - host: llm.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: servicerunner
                port:
                  number: 8088
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - llm.contextsuite.com
      secretName: star-contextsuite-com
